src/main/java/oo/solid/isp/sample/good/TelefoneFixo.java
package oo.solid.isp.sample.good;

public class TelefoneFixo implements Telefonia {
    @Override
    public void tocar() {
        // como um fixo toca
    }

    @Override
    public void discar() {
        // como um fixo realiza a discagem
    }
}
